--- a/projetor/index.htm
+++ b/projetor/index.htm
@@ -2358,7 +2358,7 @@ jQuery.noConflict()(function($) {
 
 
               <product-payment-container form-id="product-form-template--22849907196184__main-9363878281496" id="MainPaymentContainer" class="product-form__payment-container">
-                <button id="StickyAddToCart" type="submit" is="loader-button" data-use-primary="" data-product-add-to-cart-button="" data-button-content="RESGATAR" class="product-form__add-button button button--primary button--full">RESGATAR</button></product-payment-container><input type="hidden" name="product-id" value="9363878281496"><input type="hidden" name="section-id" value="template--22849907196184__main"></form></div><store-pickup form-id="product-form-template--22849907196184__main-9363878281496" class="product-form__store-availability-container"></store-pickup></div>
+                <button id="StickyAddToCart" type="submit" is="loader-button" data-use-primary="" data-product-add-to-cart-button="" data-button-content="RESGATAR" class="product-form__add-button button button--primary button--full">Comprar</button></product-payment-container><input type="hidden" name="product-id" value="9363878281496"><input type="hidden" name="section-id" value="template--22849907196184__main"></form></div><store-pickup form-id="product-form-template--22849907196184__main-9363878281496" class="product-form__store-availability-container"></store-pickup></div>
 
 
      
