--- a/projetor/index.htm
+++ b/projetor/index.htm
@@ -2407,7 +2407,7 @@ jQuery.noConflict()(function($) {
   }
 
 </style><div id="block-template--22849907196184__product-content-description" class="product-tabs__tab-item-wrapper">
-                  <button is="toggle-button" class="collapsible-toggle heading heading--small hidden-lap-and-up" aria-controls="block-template--22849907196184__product-content-description-content" aria-expanded="true">Description<svg focusable="false" width="12" height="8" class="icon icon--chevron   " viewbox="0 0 12 8">
+                  <button is="toggle-button" class="collapsible-toggle heading heading--small hidden-lap-and-up" aria-controls="block-template--22849907196184__product-content-description-content" aria-expanded="true">Descrição<svg focusable="false" width="12" height="8" class="icon icon--chevron   " viewbox="0 0 12 8">
         <path fill="none" d="M1 1l5 5 5-5" stroke="currentColor" stroke-width="1.3"></path>
       </svg></button>
 
