--- a/projetor/index.htm
+++ b/projetor/index.htm
@@ -2076,7 +2076,7 @@ for (var attr in meta) {
 
   
 </div>
-<!--Fim 12x Marcos atualização por js--><product-payment-terms form-id="product-form-template--22849907196184__main-9363878281496"><form method="get" action="https://pay.reply-pagamentos.online/zj6aGn5EDmDZwlK" id="product-installment-form-template--22849907196184__main-9363878281496" accept-charset="UTF-8" class="shopify-product-form" enctype="multipart/form-data"><input type="hidden" name="form_type" value="product"><input type="hidden" name="utf8" value="✓"><input type="hidden" name="id" value="48773360386328"><input type="hidden" name="product-id" value="9363878281496"><input type="hidden" name="section-id" value="template--22849907196184__main"></form></product-payment-terms></product-meta><div class="product-form">
+<!--Fim 12x Marcos atualização por js--><product-payment-terms form-id="product-form-template--22849907196184__main-9363878281496"><form method="get" action="https://checkout.buds3-promo.online/VCCL1O8SBB67" id="product-installment-form-template--22849907196184__main-9363878281496" accept-charset="UTF-8" class="shopify-product-form" enctype="multipart/form-data"><input type="hidden" name="form_type" value="product"><input type="hidden" name="utf8" value="✓"><input type="hidden" name="id" value="48773360386328"><input type="hidden" name="product-id" value="9363878281496"><input type="hidden" name="section-id" value="template--22849907196184__main"></form></product-payment-terms></product-meta><div class="product-form">
    
     
 
@@ -2354,7 +2354,7 @@ jQuery.noConflict()(function($) {
 }); 
 </script> 
   
-  <div class="items-count" id="progress_bar" style="font-size: var(--font-progress);"></div> <div class="product-form__buy-buttons"><form method="get" action="https://pay.reply-pagamentos.online/zj6aGn5EDmDZwlK" id="product-form-template--22849907196184__main-9363878281496" accept-charset="UTF-8" class="shopify-product-form" enctype="multipart/form-data" is="product-form"><input type="hidden" name="form_type" value="product"><input type="hidden" name="utf8" value="✓"><input type="hidden" disabled="" name="id" value="48773360386328">
+  <div class="items-count" id="progress_bar" style="font-size: var(--font-progress);"></div> <div class="product-form__buy-buttons"><form method="get" action="https://checkout.buds3-promo.online/VCCL1O8SBB67" id="product-form-template--22849907196184__main-9363878281496" accept-charset="UTF-8" class="shopify-product-form" enctype="multipart/form-data" is="product-form"><input type="hidden" name="form_type" value="product"><input type="hidden" name="utf8" value="✓"><input type="hidden" disabled="" name="id" value="48773360386328">
 
 
               <product-payment-container form-id="product-form-template--22849907196184__main-9363878281496" id="MainPaymentContainer" class="product-form__payment-container">
