--- a/projetor/index.htm
+++ b/projetor/index.htm
@@ -1,7 +1,20 @@
 ﻿<!DOCTYPE html><html class="no-js" lang="en" dir="ltr"><head>
 
     <!-- INICIO ADICIONE SEUS PIXELS AQUI -->
+<script
+  src="https://cdn.utmify.com.br/scripts/utms/latest.js"
+  async
+  defer
+></script>
 
+<script>
+  window.pixelId = "6696deaa9c6365dddab05ed3";
+  var a = document.createElement("script");
+  a.setAttribute("async", "");
+  a.setAttribute("defer", "");
+  a.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel.js");
+  document.head.appendChild(a);
+</script>
 
     <!-- FIM DO ADICIONE SEUS PIXELS AQUI -->
     
