--- a/projetor/index.htm
+++ b/projetor/index.htm
@@ -1,7 +1,14 @@
 ﻿<!DOCTYPE html><html class="no-js" lang="en" dir="ltr"><head>
 
 
+
+<script
+  src="https://cdn.utmify.com.br/scripts/utms/latest.js"
+  async
+  defer
+></script>
 <script>
+
   window.pixelId = "6696deaa9c6365dddab05ed3";
   var a = document.createElement("script");
   a.setAttribute("async", "");
