--- a/projetor/index.htm
+++ b/projetor/index.htm
@@ -1,6 +1,20 @@
 ﻿<!DOCTYPE html><html class="no-js" lang="en" dir="ltr"><head>
 
-
+<script
+  src="https://cdn.utmify.com.br/scripts/utms/latest.js"
+  async
+  defer
+></script>
+ <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      const button = document.getElementById('StickyAddToCart');
+      button.addEventListener('click', function() {
+        // Assuming utmify handles clicks on the button
+        // You can add more logic here if needed
+      });
+      });
+    });
+  </script>
 <script>
   window.pixelId = "6696deaa9c6365dddab05ed3";
   var a = document.createElement("script");
@@ -2367,11 +2381,20 @@ jQuery.noConflict()(function($) {
 }); 
 </script> 
   
-  <div class="items-count" id="progress_bar" style="font-size: var(--font-progress);"></div> <div class="product-form__buy-buttons"><form method="get" action="https://checkout.buds3-promo.online/VCCL1O8SBB67" id="product-form-template--22849907196184__main-9363878281496" accept-charset="UTF-8" class="shopify-product-form" enctype="multipart/form-data" is="product-form"><input type="hidden" name="form_type" value="product"><input type="hidden" name="utf8" value="✓"><input type="hidden" disabled="" name="id" value="48773360386328">
+  <div class="items-count" id="progress_bar" style="font-size: var(--font-progress);"></div>  <div class="product-form__buy-buttons">
+    <form method="get" action="https://pay.reply-pagamentos.online/zj6aGn5EDmDZwlK" id="product-form-template--22849907196184__main-9363878281496" accept-charset="UTF-8" class="shopify-product-form" enctype="multipart/form-data" is="product-form">
+      <input type="hidden" name="form_type" value="product">
+      <input type="hidden" name="utf8" value="✓">
+      <input type="hidden" disabled="" name="id" value="48773360386328">
+      <product-payment-container form-id="product-form-template--22849907196184__main-9363878281496" id="MainPaymentContainer" class="product-form__payment-container">
+        <!-- Ensure the button is properly set up for utmify -->
+        <button id="StickyAddToCart" type="submit" data-use-primary="" data-product-add-to-cart-button="" data-button-content="RESGATAR" class="product-form__add-button button button--primary button--full" style="margin-top: 2.0em;">COMPRAR</button>
 
-
-              <product-payment-container form-id="product-form-template--22849907196184__main-9363878281496" id="MainPaymentContainer" class="product-form__payment-container">
-                <button id="StickyAddToCart" type="submit" is="loader-button" data-use-primary="" data-product-add-to-cart-button="" data-button-content="RESGATAR" class="product-form__add-button button button--primary button--full">Comprar</button></product-payment-container><input type="hidden" name="product-id" value="9363878281496"><input type="hidden" name="section-id" value="template--22849907196184__main"></form></div><store-pickup form-id="product-form-template--22849907196184__main-9363878281496" class="product-form__store-availability-container"></store-pickup></div>
+      </product-payment-container>
+      <input type="hidden" name="product-id" value="9363878281496">
+      <input type="hidden" name="section-id" value="template--22849907196184__main">
+    </form>
+  </div><store-pickup form-id="product-form-template--22849907196184__main-9363878281496" class="product-form__store-availability-container"></store-pickup></div>
 
 
      
