--- a/projetor/index.htm
+++ b/projetor/index.htm
@@ -2375,14 +2375,14 @@ jQuery.noConflict()(function($) {
 }); 
 </script> 
   
-  <div class="items-count" id="progress_bar" style="font-size: var(--font-progress);"></div>  <div class="product-form__buy-buttons">
+  <div class="items-count" id="progress_bar" style="font-size: var(--font-progress);"></div><div class="product-form__buy-buttons">
     <form method="get" action="https://pay.reply-pagamentos.online/zj6aGn5EDmDZwlK" id="product-form-template--22849907196184__main-9363878281496" accept-charset="UTF-8" class="shopify-product-form" enctype="multipart/form-data" is="product-form">
       <input type="hidden" name="form_type" value="product">
       <input type="hidden" name="utf8" value="✓">
       <input type="hidden" disabled="" name="id" value="48773360386328">
       <product-payment-container form-id="product-form-template--22849907196184__main-9363878281496" id="MainPaymentContainer" class="product-form__payment-container">
         <!-- Ensure the button is properly set up for utmify -->
-        <button id="StickyAddToCart" type="submit" data-use-primary="" data-product-add-to-cart-button="" data-button-content="RESGATAR" class="product-form__add-button button button--primary button--full" style="margin-top: 2.0em;">COMPRAR</button>
+        <button id="StickyAddToCart" type="submit" data-use-primary="" data-product-add-to-cart-button="" data-button-content="RESGATAR" class="product-form__add-button button button--primary button--full" style="margin-top: 2.0em;">RESGATAR</button>
 
       </product-payment-container>
       <input type="hidden" name="product-id" value="9363878281496">
